[package]
name = "http_cpu_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2.6"
tokio = { version = "1.0", features = ["full"] }
num_cpus = "1.13.0"
tower-http = "0.1.1"
tower = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
pin-project = "1.0.8"
